--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<h1> Totally Trivial Trivia! </h1>
 
 	<h2> Time Remaining: </h2>
-	<h2 id="timer"> </h2>
+	<div id="timer_div"> </div>
+	</br>
 
 <!-- Quiz -->
 			<form name="quiz" method="post" name="buttons" id="quiz" onsubmit="return false">
