--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-<link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Fredoka+One|Jura|Permanent+Marker" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Jura|Permanent+Marker" rel="stylesheet">
 
 </head>
 <body>
