--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Jura|Permanent+Marker" rel="stylesheet">
 
+	<link href="https://fonts.googleapis.com/css?family=Catamaran|Satisfy" rel="stylesheet">
 </head>
 <body>
+
 	<h1> Totally Trivial Trivia! </h1>
 
-	<div style = "clear: both">
-		<h2 style="float: right"  id="timer_div"> -- </h2>
+	<div id="timerContainer">
+		<div style = "clear: both">
+			<h2 style="float: right"  id="timer_div"> -- </h2>
 
-		<h2 style="float: right" id="timeRemain"> Time Remaining: </h2>
-
+			<h2 style="float: right" id="timeRemain"> Time Remaining: </h2>
+		</div>
 		
 	</div>
 
